# community-signal-engine

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
cse/: arena_bot.py  fast_parse.py  fast_rank.py  glider_api.py  glider_prices.py  learned_score.py  parser.py  quant_score.py  resolve_tokens.py  scrape_history.py  weekly_digest.py
data/: portfolios.db-shm  portfolios.db-wal  scoring_model.pkl
docs/: methodology.md
scripts/: analyze_portfolios.py  backtest_scores.py
tests/: test_edge_cases.py  test_glider_prices.py  test_quant_score.py
